Possibility to run with jrebel